<resources>
    <string name="app_name">MiRuta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="historial">HISTORIAL</string>
    <string name="Direccion1">Direccion 1</string>
    <string name="Direccion2">Direccion 2</string>
    <string name="Direccion3">Direccion 3</string>
    <string name="Direccion4">Direccion 4</string>
    <string name="titulo_calificacion">¿Cómo te pareció el servicio?</string>
    <string name="calificacion_servicio_pesimo">Pesimo</string>
    <string name="perfil">Perfil</string>
    <string name="texto1">Nombre</string>
    <string name="texto2">Correo</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="calificacion_servicio_normal">Normal</string>
    <string name="calificacion_servicio_bueno">Bueno</string>
    <string name="nombre_proyecto">MiRuta</string>


    <!--Strings de textos para el activity_main-->
    <string name="tituloappbar">Mi Ruta</string>
    <string name="DescripcionBtnHamburguesa">Boton de menu hamurgesa</string>
    <!--Strings de textos para el menu-->
    <string name="tituloiconomapa">MAPA</string>
    <string name="tituloiconorutas">RUTAS</string>
    <string name="tituloiconoparadas">PARADAS</string>
    <string name="tituloiconofavoritos">FAVORITOS</string>
    <!--Strings de textos para el item de rutas-->
    <string name="lugarinicioruta">Lugar inicio ruta</string>
</resources>