<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="fragmentInicioMapa"
        android:enabled="true"
        android:icon="@drawable/iconomapa"
        android:title="@string/tituloiconomapa">
    </item>

    <item
        android:id="@+id/fragmentRutas"
        android:enabled="true"
        android:icon="@drawable/iconorutas"
        android:title="@string/tituloiconorutas">
    </item>

    <item
        android:id="@+id/fragmentParadas"
        android:enabled="true"
        android:icon="@drawable/iconoparada"
        android:title="@string/tituloiconoparadas">
    </item>

    <item
        android:id="fragmentHistorial"
        android:enabled="true"
        android:icon="@drawable/iconofavoritos"
        android:title="@string/tituloiconofavoritos">
    </item>
</menu>